--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "dotenv": "^4.0.0",
     "graphql": "^0.11.7",
+    "graphql-subscriptions": "^0.5.6",
     "graphql-tools": "^2.10.0",
     "http-server": "^0.11.1",
     "koa": "^2.4.1",
@@ -27,6 +28,7 @@
     "koa-router": "^7.3.0",
     "merge-graphql-schemas": "^1.4.0",
     "nodemon": "^1.14.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "subscriptions-transport-ws": "^0.9.5"
   }
 }
